Issue #1672360: Small css fixes to bring to product detail page on narrow screens. Change-Id: Ic0d97ee2e9683d0d40641963a496ead40ad47bb1 Reviewed-on: https://code.drupalcommerce.org/117 Tested-by: Jenkins <jenkins@commerceguys.com> Reviewed-by: Bojan Zivanovic <bojan@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-narrow.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-narrow.css
@@ -123,3 +123,7 @@
   float: left;
   margin: 5px;
 }
+/* Product details */
+.commerce-add-to-cart label {
+  float: none;
+}
